awx-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: awx-lb
spec:
  type: LoadBalancer
  selector:
    app: awx-deploy-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
