awx-deploy.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "awx-deploy"
    labels:
        app: "awx-deploy-service"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: awx-mgmt.4f3706b7ff3b435f91e6.westus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "awx-deploy-service"
                servicePort: 80
