ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "awx-deploy"
    labels:
        app: "awx-deploy-service"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: awx.17a30a6b86214588b7e1.westus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "awx-deploy-service"
                servicePort: 80
