nexus-deploy.yml

---
apiVersion: v1
kind: Namespace
metadata:
  name: "devops-tools"
  labels:
    name: "devops-tools"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "nexus"
  namespace: "devops-tools"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "nexus-server"
  template:
    metadata:
      labels:
        app: "nexus-server"
    spec:
      containers:
        - name: "nexus"
          image: sonatype/nexus3:latest
          securityContext:
            runAsUser: 1000
            runAsGroup: 3000
          resources:
            limits:
              memory: "4Gi"
              cpu: "1000m"
            requests:
              memory: "2Gi"
              cpu: "500m"
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: nexus-data
              mountPath: /sonatype-work
      volumes:
        - name: nexus-data
          persistentVolumeClaim:
            claimName: nexus-data-claim
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: devops-tools
spec:
  selector: 
    app: nexus-server
  type: NodePort  
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 32000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "nexus"
    namespace: "devops-tools"
    labels:
        app: "nexus-service"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: nexus-mgmt.e528a91a72a644e186ec.westus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "nexus-service"
                servicePort: 8081
